--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,17 @@ body {
 }
 .swiper-slide {
   height: 300px;
-  background: #882525;
+  background: white;
   line-height: 300px;
   text-align: center;
+}
+.swiper-pagination-bullet{
+  color: red;
+  background-color: red;
+} 
+.swiper-pagination-bullet-active{
+  color: aliceblue;
+}
+.swiper-pagination{
+  background:red;
 }
